[package]
name = "wasefire-protocol-tokio"
version = "0.1.1"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2024"
description = "Wasefire protocol using std::io::Read and Write"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["framework"]
categories = []

[package.metadata.docs.rs]
features = ["device"]

[dependencies]
anyhow = { version = "1.0.99", default-features = false, features = ["std"] }
wasefire-error = { version = "0.1.3", path = "../error", optional = true }
wasefire-logger = { version = "0.2.0", path = "../logger", optional = true }
wasefire-one-of = { version = "0.1.1", path = "../one-of" }

[dependencies.tokio]
version = "1.47.1"
default-features = false
features = ["io-util", "macros", "net", "rt", "sync"]

[dependencies.wasefire-board-api]
version = "0.9.0"
path = "../board"
features = ["std"]
optional = true

[dependencies.wasefire-protocol]
version = "0.3.0"
path = "../protocol"
features = ["host"]
optional = true

[features]
log = ["wasefire-board-api?/log", "wasefire-logger?/log"]
# Exactly one of host or device must be selected.
device = ["dep:wasefire-board-api", "dep:wasefire-error", "dep:wasefire-logger"]
host = ["dep:wasefire-protocol"]

[lints]
clippy.literal-string-with-formatting-args = "allow"
clippy.mod-module-files = "warn"
clippy.uninlined_format_args = "allow"
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unused-crate-dependencies = "warn"
