[package]
name = "wasefire-protocol-usb"
version = "0.3.0-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2024"
description = "Wasefire USB protocol between platform and host"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["embedded", "framework", "no-std"]
categories = ["embedded", "no-std"]

[package.metadata.docs.rs]
features = ["device"]

[dependencies]
anyhow = { version = "1.0.97", default-features = false, features = ["std"], optional = true }
defmt = { version = "0.3.10", default-features = false, optional = true }
rusb = { version = "0.9.4", default-features = false, optional = true }
usb-device = { version = "0.3.2", default-features = false, optional = true }
wasefire-error = { version = "0.1.3-git", path = "../error", optional = true }
wasefire-logger = { version = "0.1.7-git", path = "../logger" }
wasefire-one-of = { version = "0.1.1-git", path = "../one-of" }

[dependencies.wasefire-board-api]
version = "0.9.0-git"
path = "../board"
optional = true

[dependencies.wasefire-protocol]
version = "0.3.0-git"
path = "../protocol"
features = ["host"]
optional = true

[features]
defmt = ["dep:defmt", "wasefire-board-api?/defmt", "wasefire-error?/defmt", "wasefire-logger/defmt"]
log = ["wasefire-board-api?/log", "wasefire-logger/log"]
std = ["wasefire-board-api?/std"]
# Exactly one of host or device must be selected.
device = ["dep:usb-device", "dep:wasefire-board-api", "dep:wasefire-error"]
host = ["dep:anyhow", "dep:rusb", "dep:wasefire-protocol", "std"]

[lints]
clippy.literal-string-with-formatting-args = "allow"
clippy.mod-module-files = "warn"
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unused-crate-dependencies = "warn"
