[package]
name = "wasefire-protocol"
version = "0.2.0"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2021"
description = "Wasefire protocol between platform and host"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["embedded", "framework", "no-std"]
categories = ["embedded", "no-std"]

[package.metadata.docs.rs]
features = ["device", "host"]

[dependencies]
anyhow = { version = "1.0.86", default-features = false, features = ["std"], optional = true }
serde = { version = "1.0.202", default-features = false, features = ["derive"], optional = true }
wasefire-error = { version = "0.1.2", path = "../error" }
wasefire-wire = { version = "0.1.1", path = "../wire" }

[features]
_descriptor = []
_exhaustive = []
device = []
host = ["dep:anyhow", "wasefire-error/std"]
serde = ["dep:serde"]

[lints]
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unsafe-op-in-unsafe-fn = "warn"
rust.unused-crate-dependencies = "warn"
