[package]
name = "wasefire-protocol"
version = "0.3.0-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2024"
description = "Wasefire protocol between platform and host"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["embedded", "framework", "no-std"]
categories = ["embedded", "no-std"]

[package.metadata.docs.rs]
features = ["device", "host"]

[dependencies]
anyhow = { version = "1.0.97", default-features = false, features = ["std"], optional = true }
data-encoding = { version = "2.8.0", default-features = false, features = ["std"], optional = true }
serde = { version = "1.0.219", default-features = false, features = ["derive"], optional = true }
wasefire-common = { version = "0.1.0-git", path = "../common" }
wasefire-error = { version = "0.1.3-git", path = "../error" }
wasefire-wire = { version = "0.1.2-git", path = "../wire" }

[features]
_descriptor = []
_exhaustive = []
device = []
host = ["dep:anyhow", "dep:data-encoding", "wasefire-error/std"]
serde = ["dep:serde"]

[lints]
clippy.literal-string-with-formatting-args = "allow"
clippy.mod-module-files = "warn"
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unused-crate-dependencies = "warn"
