[package]
name = "wasefire-protocol"
version = "0.4.0"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2024"
description = "Wasefire protocol between platform and host"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["embedded", "framework", "no-std"]
categories = ["embedded", "no-std"]

[package.metadata.docs.rs]
features = ["device", "host"]

[dependencies]
anyhow = { version = "1.0.100", default-features = false, features = ["std"], optional = true }
wasefire-common = { version = "0.1.1", path = "../common" }
wasefire-error = { version = "0.1.4", path = "../error" }
wasefire-wire = { version = "0.1.3", path = "../wire" }

[dependencies.data-encoding]
version = "2.10.0"
default-features = false
features = ["std"]
optional = true

[dependencies.serde]
version = "1.0.228"
default-features = false
# TODO(https://github.com/rust-lang/rust/issues/35121): Remove "unstable".
features = ["alloc", "derive", "unstable"]
optional = true

[features]
_descriptor = []
_exhaustive = []
device = []
host = ["dep:anyhow", "dep:data-encoding", "wasefire-error/std"]
serde = ["dep:serde", "wasefire-common/serde", "wasefire-error/serde"]

[lints]
clippy.mod-module-files = "warn"
clippy.uninlined_format_args = "allow"
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unused-crate-dependencies = "warn"
