[package]
name = "runner-host"
version = "0.1.0"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive", "env"] }
data-encoding = "2.6.0"
env_logger = { version = "0.11.3", optional = true }
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["full"] }
usb-device = "0.3.2"
usbd-serial = "0.2.2"
usbip-device = "0.2.0"
wasefire-board-api = { path = "../board", features = ["std"] }
wasefire-cli-tools = { path = "../cli-tools" }
wasefire-error = { path = "../error" }
wasefire-interpreter = { path = "../interpreter", optional = true }
wasefire-logger = { path = "../logger" }
wasefire-one-of = { path = "../one-of" }
wasefire-protocol = { path = "../protocol" }
wasefire-protocol-tokio = { path = "../protocol-tokio", features = ["device"] }
wasefire-protocol-usb = { path = "../protocol-usb", features = ["device", "std"] }
wasefire-store = { path = "../store", features = ["std"] }
web-server = { path = "crates/web-server" }

[dependencies.wasefire-scheduler]
path = "../scheduler"
features = [
  "applet-api-platform",
  "applet-api-platform-protocol",
  "board-api-button",
  "board-api-led",
  "board-api-rng",
  "board-api-storage",
  "board-api-timer",
  "board-api-uart",
  "board-api-usb-serial",
  "software-crypto-aes128-ccm",
  "software-crypto-aes256-gcm",
  "software-crypto-hmac-sha256",
  "software-crypto-hmac-sha384",
  "software-crypto-p256",
  "software-crypto-p384",
  "software-crypto-sha256",
  "software-crypto-sha384",
  "std",
]

[features]
# Exactly one is enabled by xtask.
debug = [
  "dep:env_logger",
  "wasefire-logger/log",
  "wasefire-protocol-tokio/log",
  "wasefire-protocol-usb/log",
  "wasefire-scheduler/log",
  "web-server/log",
]
release = []
# Exactly one is enabled by xtask.
native = ["wasefire-scheduler/native"]
wasm = ["dep:wasefire-interpreter", "wasefire-scheduler/wasm"]

[lints]
clippy.mod-module-files = "warn"
clippy.unit-arg = "allow"
rust.unsafe-op-in-unsafe-fn = "warn"
rust.unused-crate-dependencies = "warn"
