[package]
name = "runner-host"
version = "0.1.0"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive", "env"] }
data-encoding = "2.9.0"
env_logger = { version = "0.11.8", optional = true }
rand = "0.9.2"
syscall-test = { path = "../board/crates/syscall-test" }
tokio = { version = "1.49.0", features = ["full"] }
usb-device = "0.3.2"
usbd-hid = { version = "0.9.0", features = ["std"] }
usbd-serial = "0.2.2"
wasefire-board-api = { path = "../board", features = ["std"] }
wasefire-cli-tools = { path = "../cli-tools" }
wasefire-common = { path = "../common" }
wasefire-error = { path = "../error" }
wasefire-interpreter = { path = "../interpreter", optional = true }
wasefire-logger = { path = "../logger" }
wasefire-one-of = { path = "../one-of" }
wasefire-protocol = { path = "../protocol", features = ["host"] }
wasefire-protocol-tokio = { path = "../protocol-tokio", features = ["device"] }
wasefire-protocol-usb = { path = "../protocol-usb", features = ["device", "std"] }
wasefire-store = { path = "../store", features = ["std"] }
web-server = { path = "crates/web-server" }

# TODO(https://github.com/Sawchord/usbip-device/pull/9): Use Sawchord repository
# TODO(usbip-device > 0.2.0): Use crates.io
[dependencies.usbip-device]
git = "https://github.com/ia0/usbip-device.git"
rev = "e918bf64a29eef0edc4572d65df4e813b80755f2"

[dependencies.wasefire-scheduler]
path = "../scheduler"
features = [
  "applet-api-platform",
  "applet-api-platform-protocol",
  "board-api-button",
  "board-api-clock",
  "board-api-led",
  "board-api-rng",
  "board-api-storage",
  "board-api-timer",
  "board-api-uart",
  "board-api-usb-ctap",
  "board-api-usb-serial",
  "board-api-vendor",
  "software-crypto-aes128-ccm",
  "software-crypto-aes256-cbc",
  "software-crypto-aes256-gcm",
  "software-crypto-ed25519",
  "software-crypto-hmac-sha256",
  "software-crypto-hmac-sha384",
  "software-crypto-p256",
  "software-crypto-p256-ecdh",
  "software-crypto-p256-ecdsa",
  "software-crypto-p384",
  "software-crypto-p384-ecdh",
  "software-crypto-p384-ecdsa",
  "software-crypto-sha256",
  "software-crypto-sha384",
  "std",
]

[features]
# Exactly one is enabled by xtask.
debug = [
  "dep:env_logger",
  "wasefire-interpreter?/debug",
  "wasefire-logger/log",
  "wasefire-protocol-tokio/log",
  "wasefire-protocol-usb/log",
  "wasefire-scheduler/log",
  "web-server/log",
]
release = []
# Exactly one is enabled by xtask.
native = ["wasefire-scheduler/native"]
pulley = ["wasefire-scheduler/pulley"]
wasm = ["dep:wasefire-interpreter", "wasefire-scheduler/wasm"]

[lints]
clippy.mod-module-files = "warn"
clippy.uninlined_format_args = "allow"
clippy.unit-arg = "allow"
rust.unused-crate-dependencies = "warn"
