[package]
name = "runner-nordic"
version = "0.1.0"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3", features = ["set-vtor"] }
critical-section = "1.1.2"
defmt = { version = "0.3.8", features = ["avoid-default-panic"], optional = true }
defmt-rtt = { version = "0.4.1", optional = true }
embedded-alloc = "0.6.0"
embedded-hal = "1.0.0"
embedded-hal-02 = { version = "0.2.7", package = "embedded-hal" }
embedded-storage = "0.3.1"
header = { path = "crates/header", features = ["alloc"] }
nrf52840-hal = { version = "0.18.0", features = ["embedded-hal-02"] }
panic-abort = { version = "0.3.2", optional = true }
panic-probe = { version = "0.3.2", features = ["print-defmt"], optional = true }
typenum = { version = "1.17.0", default-features = false }
usb-device = "0.3.2"
usbd-serial = "0.2.2"
wasefire-applet-api = { path = "../api" }
wasefire-board-api = { path = "../board" }
wasefire-error = { path = "../error" }
wasefire-interpreter = { path = "../interpreter", optional = true }
wasefire-logger = { path = "../logger" }
wasefire-one-of = { version = "0.1.0-git", path = "../one-of" }
wasefire-protocol-usb = { path = "../protocol-usb", features = ["device"] }
wasefire-store = { path = "../store" }
wasefire-sync = { path = "../sync" }

[dependencies.rubble]
git = "https://github.com/jmichelp/rubble.git"
rev = "d545f4f598d081c0177f38500792e353a7d932a3"

[dependencies.rubble-nrf5x]
git = "https://github.com/jmichelp/rubble.git"
rev = "d545f4f598d081c0177f38500792e353a7d932a3"
features = ["52840"]

[dependencies.wasefire-scheduler]
path = "../scheduler"
features = [
  "applet-api-platform",
  "applet-api-platform-protocol",
  "applet-api-platform-update",
  "board-api-button",
  "board-api-crypto-aes128-ccm",
  "board-api-gpio",
  "board-api-led",
  "board-api-radio-ble",
  "board-api-rng",
  "board-api-storage",
  "board-api-timer",
  "board-api-uart",
  "board-api-usb-serial",
]

[features]
# Software crypto features.
software-crypto-aes256-gcm = ["wasefire-scheduler/software-crypto-aes256-gcm"]
software-crypto-p256 = ["software-crypto-sha256", "wasefire-scheduler/software-crypto-p256"]
software-crypto-sha256 = ["wasefire-scheduler/software-crypto-sha256"]
# Exactly one is enabled by xtask.
debug = [
  "dep:defmt",
  "dep:defmt-rtt",
  "dep:panic-probe",
  "wasefire-board-api/defmt",
  "wasefire-error/defmt",
  "wasefire-logger/defmt",
  "wasefire-protocol-usb/defmt",
  "wasefire-scheduler/defmt",
]
release = ["dep:panic-abort"]
# Exactly one is enabled by xtask.
native = ["wasefire-scheduler/native"]
wasm = ["dep:wasefire-interpreter", "wasefire-scheduler/wasm"]
# Internal features.
_software-crypto = ["software-crypto-aes256-gcm", "software-crypto-p256", "software-crypto-sha256"]

[lints]
clippy.unit-arg = "allow"
rust.unsafe-op-in-unsafe-fn = "warn"
rust.unused-crate-dependencies = "warn"
