[package]
name = "runner-nordic"
version = "0.1.0"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
ble-adv = { path = "crates/ble-adv", optional = true }
bytemuck = { version = "1.23.2", default-features = false, optional = true }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5", features = ["set-vtor"] }
critical-section = "1.2.0"
data-encoding = { version = "2.9.0", default-features = false, optional = true }
defmt = { version = "1.0.1", features = ["avoid-default-panic"], optional = true }
defmt-rtt = { version = "1.0.0", optional = true }
embedded-alloc = "0.6.0"
embedded-hal = "1.0.0"
embedded-hal-02 = { version = "0.2.7", package = "embedded-hal" }
embedded-storage = "0.3.1"
header = { path = "crates/header" }
panic-abort = { version = "0.3.2", optional = true }
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
syscall-test = { path = "../board/crates/syscall-test", optional = true }
typenum = { version = "1.19.0", default-features = false, optional = true }
usb-device = "0.3.2"
usbd-hid = { version = "0.8.2", optional = true }
usbd-serial = { version = "0.2.2", optional = true }
wasefire-board-api = { path = "../board" }
wasefire-common = { path = "../common" }
wasefire-error = { path = "../error" }
wasefire-interpreter = { path = "../interpreter", optional = true }
wasefire-logger = { path = "../logger" }
wasefire-one-of = { path = "../one-of" }
wasefire-protocol-usb = { path = "../protocol-usb", features = ["device"] }
wasefire-store = { path = "../store" }
wasefire-sync = { path = "../sync" }

# TODO(nrf52840-hal > 0.18.0): Use crates.io
[dependencies.nrf52840-hal]
git = "https://github.com/nrf-rs/nrf-hal.git"
rev = "7e25fddfba533d81b28d551a485ea16c53285d5a"
features = ["embedded-hal-02"]

[dependencies.rubble]
git = "https://github.com/ia0/rubble.git"
rev = "52b4090d42ddf3968459cc194b31b3cb929cb28d"
optional = true

[dependencies.rubble-nrf5x]
git = "https://github.com/ia0/rubble.git"
rev = "52b4090d42ddf3968459cc194b31b3cb929cb28d"
features = ["52840"]
optional = true

[dependencies.wasefire-scheduler]
path = "../scheduler"
features = [
  "applet-api-platform",
  "applet-api-platform-protocol",
  "applet-api-platform-update",
  "board-api-button",
  "board-api-clock",
  "board-api-led",
  "board-api-rng",
  "board-api-storage",
  "board-api-timer",
]

[features]
aes128-ccm = ["_crypto", "dep:typenum", "wasefire-scheduler/board-api-crypto-aes128-ccm"]
ble-adv = ["_vendor", "dep:ble-adv", "dep:rubble", "dep:rubble-nrf5x"]
fpc2534 = [
  "_gpio_port1",
  "dep:bytemuck",
  "wasefire-scheduler/board-api-fingerprint-matcher",
  "wasefire-scheduler/board-api-fingerprint-sensor",
]
gpio = ["_gpio_port1", "_vendor", "wasefire-scheduler/board-api-gpio"]
test-vendor = ["_vendor", "dep:data-encoding", "dep:syscall-test"]
uart = ["wasefire-scheduler/board-api-uart"]
usb-ctap = ["_usb", "dep:usbd-hid", "wasefire-scheduler/board-api-usb-ctap"]
usb-serial = ["_usb", "dep:usbd-serial", "wasefire-scheduler/board-api-usb-serial"]
# Software crypto features.
software-crypto-aes256-cbc = ["_crypto", "wasefire-scheduler/software-crypto-aes256-cbc"]
software-crypto-aes256-gcm = ["_crypto", "wasefire-scheduler/software-crypto-aes256-gcm"]
software-crypto-hmac-sha256 = [
  "software-crypto-sha256",
  "wasefire-scheduler/software-crypto-hmac-sha256",
]
software-crypto-p256 = ["software-crypto-sha256", "wasefire-scheduler/software-crypto-p256"]
software-crypto-p256-ecdh = ["_crypto", "wasefire-scheduler/software-crypto-p256-ecdh"]
software-crypto-p256-ecdsa = [
  "software-crypto-sha256",
  "wasefire-scheduler/software-crypto-p256-ecdsa",
]
software-crypto-sha256 = ["_crypto", "wasefire-scheduler/software-crypto-sha256"]
# Exactly one is enabled by xtask.
board-devkit = ["header/board-devkit"]
board-dongle = ["_gpio_port1", "header/board-dongle"]
board-makerdiary = ["header/board-makerdiary"]
# Exactly one is enabled by xtask.
debug = [
  "ble-adv?/defmt",
  "dep:defmt",
  "dep:defmt-rtt",
  "dep:panic-probe",
  "syscall-test?/defmt",
  "usbd-hid?/defmt",
  "wasefire-board-api/defmt",
  "wasefire-error/defmt",
  "wasefire-logger/defmt",
  "wasefire-protocol-usb/defmt",
  "wasefire-scheduler/defmt",
]
release = ["dep:panic-abort"]
# Exactly one is enabled by xtask.
native = ["wasefire-scheduler/native"]
pulley = ["wasefire-scheduler/pulley"]
wasm = ["dep:wasefire-interpreter", "wasefire-scheduler/wasm"]
# Internal features.
_crypto = []
_full = ["_software-crypto", "aes128-ccm", "ble-adv", "gpio", "uart", "usb-ctap", "usb-serial"]
_gpio_port1 = []
_software-crypto = [
  "software-crypto-aes256-cbc",
  "software-crypto-aes256-gcm",
  "software-crypto-hmac-sha256",
  "software-crypto-p256",
  "software-crypto-p256-ecdh",
  "software-crypto-p256-ecdsa",
  "software-crypto-sha256",
]
_usb = []
_vendor = ["wasefire-scheduler/board-api-vendor"]

[lints]
clippy.literal-string-with-formatting-args = "allow"
clippy.mod-module-files = "warn"
clippy.uninlined_format_args = "allow"
clippy.unit-arg = "allow"
rust.unused-crate-dependencies = "warn"
