[package]
name = "runner-opentitan"
version = "0.1.0"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
bytemuck = { version = "1.24.0", default-features = false }
critical-section = "1.2.0"
crypto-common = { version = "0.1.6", default-features = false }
defmt = { version = "1.0.1", optional = true }
digest = { version = "0.10.7", default-features = false }
earlgrey = { path = "crates/earlgrey" }
embedded-alloc = "0.6.0"
syscall-test = { path = "../board/crates/syscall-test", optional = true }
typenum = { version = "1.19.0", default-features = false }
usb-device = { version = "0.3.2", default-features = false }
usbd-hid = { version = "0.9.0", optional = true }
wasefire-board-api = { path = "../board" }
wasefire-common = { path = "../common" }
wasefire-error = { path = "../error" }
wasefire-interpreter = { path = "../interpreter", optional = true }
wasefire-logger = { path = "../logger" }
wasefire-one-of = { path = "../one-of" }
wasefire-protocol-usb = { path = "../protocol-usb", features = ["device"] }
wasefire-store = { path = "../store" }
wasefire-sync = { path = "../sync", features = ["unsafe-assume-single-core"] }

# TODO(riscv > 0.13.0): Use crates.io
[dependencies.riscv]
git = "https://github.com/rust-embedded/riscv.git"
rev = "23be2d1dd22773906c57584830bdd0afbf83f0e3"
features = ["critical-section-single-hart"]

# TODO(riscv-rt > 0.14.0): Use crates.io
[dependencies.riscv-rt]
git = "https://github.com/rust-embedded/riscv.git"
rev = "23be2d1dd22773906c57584830bdd0afbf83f0e3"
features = ["single-hart", "v-trap"]

[dependencies.wasefire-scheduler]
path = "../scheduler"
features = [
  "board-api-button",
  "board-api-clock",
  "board-api-crypto-aes256-cbc",
  "board-api-crypto-hmac-sha256",
  "board-api-crypto-p256-ecdh",
  "board-api-crypto-p256-ecdsa",
  "board-api-crypto-sha256",
  "board-api-led",
  "board-api-rng",
  "board-api-storage",
  "board-api-timer",
]

[features]
ed25519 = ["wasefire-scheduler/board-api-crypto-ed25519"]
software-ed25519 = ["wasefire-scheduler/software-crypto-ed25519"]
usb-ctap = ["_usb", "dep:usbd-hid", "wasefire-scheduler/board-api-usb-ctap"]
# Implements vendor APIs for testing.
test-vendor = ["dep:syscall-test", "wasefire-scheduler/board-api-vendor"]
# Exactly one is enabled by xtask.
debug = [
  "dep:defmt",
  "syscall-test?/defmt",
  "usb-device/defmt",
  "wasefire-common/defmt",
  "wasefire-logger/defmt",
  "wasefire-protocol-usb/defmt",
  "wasefire-scheduler/defmt",
]
release = []
# Exactly one is enabled by xtask.
native = ["wasefire-scheduler/native"]
wasm = ["dep:wasefire-interpreter", "wasefire-scheduler/wasm"]
# Internal features.
_usb = []

[lints]
clippy.mod-module-files = "warn"
clippy.uninlined_format_args = "allow"
clippy.unit-arg = "allow"
rust.unused-crate-dependencies = "warn"
