[package]
name = "wasefire-scheduler"
version = "0.3.0-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2021"
description = "Wasefire scheduler"
repository = "https://github.com/google/wasefire"
include = ["/src"]
keywords = ["embedded", "framework", "no-std", "wasm"]
categories = ["embedded", "no-std", "wasm"]

[dependencies]
bytemuck = { version = "1.14.0", default-features = false }
critical-section = { version = "1.1.2", default-features = false }
defmt = { version = "0.3.5", default-features = false, optional = true }
derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
digest = { version = "0.10.7", default-features = false, features = ["mac"] }
generic-array = { version = "0.14.7", default-features = false }
portable-atomic = { version = "1.5.1", default-features = false }
typenum = { version = "1.17.0", default-features = false }
wasefire-applet-api = { version = "0.6.0-git", path = "../api", features = ["host"] }
wasefire-board-api = { version = "0.6.0-git", path = "../board" }
wasefire-logger = { version = "0.1.4-git", path = "../logger" }
wasefire-store = { version = "0.2.3-git", path = "../store" }

[dependencies.wasefire-interpreter]
version = "0.2.0-git"
path = "../interpreter"
features = ["toctou"]
optional = true

[features]
defmt = ["debug", "dep:defmt", "wasefire-board-api/defmt", "wasefire-logger/defmt"]
log = ["debug", "wasefire-board-api/log", "wasefire-logger/log"]
std = ["wasefire-board-api/std", "wasefire-store/std"]
# Selects between Wasm applet or native applet (choose exactly one).
native = []
wasm = ["dep:wasefire-interpreter"]
# Assume WASM modules being loaded are valid and do not validate them. This is a
# safety invariant.
unsafe-skip-validation = []
# Internal features:
debug = []
